test/translator/success/base_method.prez
import "file2.prez"

class Derived : file2::Base {
  bool b;

  Derived(int n, bool b)
      : file2::Base(n) {
    this.b = b;
  }

  override String name() {
    return "Derived";
  }
}

class GrandChild : Derived {
  GrandChild(int n) : GrandChild(n, false) {}
  GrandChild(int n, bool b) : Derived(n, b) {}
  GrandChild(int a, int b) : file2::Base(a + b) { this.b = false; }

  void sayHi() {
    print("Child of ".append(Derived.name()));
    print("Grandchild of ".append(file2::Base.name()));
  }
}


void main() {
  GrandChild g = GrandChild(5, true);
  g.sayHi();
  print(g.n);
  print(g.b);

  g = GrandChild(10, 1);
  print(g.n);
  print(g.b);

  g = GrandChild(100);
  print(g.n);
  print(g.b);
}
